Status: Canary deployments, trying with tutorial page

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,11 +1,12 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx-ingress
-  namespace: clc-flagger
+  name: podinfo
+  namespace: test
   labels:
-    app: nginx-ingress
+    app: podinfo
   annotations:
+    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
