--- a/service.yaml
+++ b/service.yaml
@@ -5,8 +5,8 @@ metadata:
   name: webapp-service
 spec:
   selector:
-    app: webapp
+    app: podinfo
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 9898
