--- a/ingress.yaml
+++ b/ingress.yaml
@@ -7,11 +7,15 @@ metadata:
     app: podinfo
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
-  defaultBackend:
-    service:
-      name: webapp-service
-      port:
-        number: 80
+  rules:
+    - http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: podinfo
+                port:
+                  number: 80
